# micro-cloud

./: CODEOWNERS  Jenkinsfile  LICENSE  README.md  SECURITY.md  checkCi.txt  meson.build
.github/workflows/: ci.yml
client/: gui.c  meson.build
daemon/: main.c  meson.build
daemon/auth/: auth.c  auth.h
daemon/db/: db.h
daemon/utils/: config.c  config.h  defaults.h  instance.c  instance.h  log.c  password.c  password.h  state.c  state.h
include/daemon/: ipc.h
include/log/: log.h
