// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 Aman Deep (amdeep.dev@gmail.com)
// SPDX-FileCopyrightText: 2026 Ashish Kumar <15678ashishk@gmail.com>

project(
  'cloud',
  'c',
  meson_version : '>= 1.3.0',
  version : '0.1',
  default_options : ['warning_level=3'],
)

dependencies = [
]

subdir('daemon')
subdir('client')

exe = executable(
  'micro-cloud',
  sources,
  dependencies : dependencies,
  install : true,
)

test('basic', exe)
